# mcp-server

server/mcp_server_serp/: README.md  pyproject.toml
server/mcp_server_serp/src/mcp_server_serp/: main.py  server.py
server/mcp_server_serp/src/mcp_server_serp/base/: config.py
