[project]
name = "mcp-server-serp"
version = "1.0"
description = "SERP MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli] @ git+https://github.com/zihengli-bytedance/python-sdk.git@temp-for-volc",
    "pydantic==2.10.6",
    "volcengine-python-sdk>=3.0.4",
    "requests==2.32.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
mcp-server-serp = "mcp_server_serp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
